# bazel-dotnet-test

./: BUILD.bazel
