load(
    "@rules_proto//proto:defs.bzl", 
    "proto_library",
)

load(
    "@rules_proto_grpc//csharp:defs.bzl", 
    "csharp_proto_compile",
)

load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_library",
)

proto_library(
    name = "protos",
    visibility = ["//visibility:public"],
    srcs = [":test.proto"],
)

csharp_proto_compile(
    name = "csharp_protos",
    protos = [
        ":protos",
    ],
)

csharp_library(
    name = "lib",
    srcs = [":csharp_protos"],
    private_deps = [
        "@main//netstandard.library",
    ],
    target_frameworks = ["netstandard2.0"],
    deps = [
        "@main//google.protobuf",
    ],
)
